# ml-template

./: .env.example  .gitignore  Dockerfile.hud  README.md  env.py  local_test.py  modal_devbox.py  modal_runner.py  platform_runner.py  pyproject.toml  sdlc_scripts.py  smoke_test.py  taskset.py
.ci/docker/: requirements-dev.txt
.github/workflows/: sync-public.yml
data/: build_datasets.py
grading/: __init__.py  checks.py  evaluate.py  mutations.py
tasks/calibration/: __init__.py  calibrate.py
tasks/data_audit_leakage/: task.py
tasks/data_audit_noise/: task.py
tasks/debug_embedding_loss/: task.py
tasks/debug_embedding_pooling/: task.py
tasks/debug_vlm_labels/: task.py
tasks/debug_vlm_projector/: task.py
tasks/emb_adapt_nq/: __init__.py  task.py
tasks/emb_audit_noise/: task.py
tasks/emb_data_influence/: setup.py  task.py
tasks/emb_debug_multi/: 00_buggy_loss.patch  10_bad_pooling.patch  task.py
tasks/emb_efficient/: task.py
tasks/emb_pipe_ablation/: setup.py  task.py
tasks/finetune_embedding/: __init__.py  task.py
tasks/flux_debug_timestep/: task.py
tasks/graders/: __init__.py  check_audit_provenance.py  check_checkpoint.py  check_code_fix.py  check_data_cleaned.py  check_eval_cleaned.py  check_merge.py  check_merge_gain.py  check_step_budget.py  check_threshold.py  check_weights.py  eval.py
tasks/merge_and_evaluate/: task.py
tasks/moe_debug_balance/: mutation.patch  task.py
tasks/moe_seed_sweep/: mutation.patch  task.py
tasks/multistage_retrieval/: task.py
tasks/mutations/: __init__.py  __main__.py  data.py  eval.py
tasks/pretrain_embedding/: task.py
tasks/tests/: __init__.py  conftest.py  test_modal_runner.py  test_mutations.py  test_platform_runner.py  test_tasks.py
tasks/tests/graders/: test_audit_provenance.py  test_checkpoint.py  test_code_fix.py  test_compilation.py  test_data_cleaned.py  test_emb_eval.py  test_eval_cleaned.py  test_flux_eval.py  test_step_budget.py  test_threshold.py
tasks/tests/tasks/: __init__.py  test_emb_ablation.py  test_emb_debug_loss.py  test_emb_debug_pooling.py  test_emb_finetune.py  test_flux_ablation.py  test_hf_roundtrip.py  test_moe_seed_sweep.py  test_setup_fixtures.py  test_vlm_debug_labels.py  test_vlm_debug_projector.py  test_vlm_finetune.py
tasks/utils/: __init__.py  build_datasets.py  setup_fixtures.py
tasks/variants/emb_audit_eval_leak/: task.py
tasks/variants/emb_audit_leakage/: task.py
tasks/variants/emb_debug_loss/: mutation.patch  task.py
tasks/variants/emb_debug_loss_hint/: task.py
tasks/variants/emb_debug_overflow/: mutation.patch  task.py
tasks/variants/emb_debug_pooling/: mutation.patch  task.py
tasks/variants/emb_debug_precision/: mutation.patch  task.py
tasks/variants/emb_debug_quantize/: mutation.patch  task.py
tasks/variants/emb_finetune/: task.py
tasks/variants/emb_merge_eval/: task.py
tasks/variants/emb_multi_retrieval/: task.py
tasks/variants/emb_pretrain/: task.py
tasks/variants/flux_debug_attn/: 00_baseline.patch  10_mutation.patch  task.py
tasks/variants/flux_debug_guidance/: 10_mutation.patch  task.py
tasks/variants/vlm_debug_labels/: mutation.patch  task.py
tasks/variants/vlm_finetune/: task.py
tasks/vlm_debug_projector/: mutation.patch  task.py
tasks/vlm_finetune/: task.py
torchtitan/experiments/: __init__.py
(+25 files in other folders)
