[project]
name = "ml-training-env"
version = "0.1.0"
description = "HUD environment for ML training experiments (torchtitan fork)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # HUD
    "hud-python>=0.6.4",
    # torchtitan core
    "torch>=2.2.0",
    "torchdata>=0.8.0",
    "datasets>=2.14,<3.0",
    "tokenizers>=0.15.0",
    "safetensors",
    "tyro",
    "tensorboard",
    "einops",
    # Embedding experiment
    "transformers>=4.40.0,<5",
    "mteb>=1.12,<2",
    # Dev
    "pytest",
    "peft>=0.18.1",
    "qwen-vl-utils>=0.0.14",
    "modal>=1.3.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["torchtitan*"]

[tool.uv]
package = true
